# Proyecto-SI

./: .gitignore  README.md
backend/: .env  README.md  RETRAINING_GUIDE.md  database.py  download_movielens.py  main.py  model_inference.py  model_inference_with_db.py  pyproject.toml  requirements.txt  retrain_model.py  schedule_retrain.py  test_database_system.py  train_model.py
backend/data/: movie_recommender.db
frontend/: .env  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/api/: movieAPI.ts  tmdbAPI.ts
frontend/src/components/: Header.tsx  MovieCard.tsx  MovieSection.tsx  StarRating.tsx
frontend/src/hooks/: useMovieRecommendations.ts  useTMDB.ts  useTopMovies.ts
frontend/src/pages/: HomePage.tsx  MovieDetailPage.tsx
frontend/src/types/: index.ts
src/: comparacion.py
testing/: pyproject.toml  resultados_comparacion_algoritmos.csv
